@@ -1,5 +1,8 @@
 2003-08-11  Jacob Smullyan  <smulloni@smullyan.org>
 
+	* pylibs/AE/Cache.py (_fixPath): now impossible once again to
+	escape the docroot.  Thanks for finding this bug (and fix), Jeroen!
+
 	* SkunkWeb/Services/templating/Handler.py (fourOhFourHandler): fix
 	for cross-site scripting vulnerability in default 404 page,
 	reported by Jeroen van Dongen.
